kubernetes/traefik/01-namespace.yml
---

apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    app.kubernetes.io/name: traefik
